2008-07-09  Spiro Trikaliotis  <spiro.trikaliotis@gmx.de>

	* c64/reu.c: set_reu_size(): Do not reset
	first_unused_register_address; remove a warning about
	uninitialised object in reu_read().

2008-07-08  Marco van den Heuvel  <blackystardust68@yahoo.com>

	* translate.c: Updated the dutch translations.

2008-07-08  Spiro Trikaliotis  <spiro.trikaliotis@gmx.de>

	* translate.c: 2 new texts for -autostartrunwithcolon.

	* arch/win32/resc128.rc, arch/win32/c128ui.c: cosmetic change:
	Norwegain -> Norwegian.

2008-06-22  pottendo  <pottendo@aon.at>

	* c128/c128-cmdline-options.c (cmdline_options): cosmetic change:
	Norwegain -> Norwegian.

	* arch/unix/joy.c (new_joystick_init): cosmetic change.

2008-07-07  Spiro Trikaliotis  <spiro.trikaliotis@gmx.de>

	* Version 1.22.24

2008-07-07  Spiro Trikaliotis  <spiro.trikaliotis@gmx.de>

	* c64/reu.c: fixed "end-of-block" for REU compare operation
	according to Wolfgang Moser's REU reference.

	* init.c, autostart.c, autostart.h, translate.txt, translate.c:
	Added new command-line options -autostartrunwithcolon and
	+autostartrunwithcolon along with corresponding vicerc option
	AutostartRunWithColon=x.

2008-07-07  Marco van den Heuvel  <blackystardust68@yahoo.com>

	* arch/beos/Makefile.am, arch/beos/constants.h, arch/beos/ui.cc,
	arch/beos/vicemenu.cc: Added copy/paste support.

	* arch/beos/console.c: Fixed a typo.

	* arch/beos/ui_sid.cc: Added a missing variable.

	* arch/os2/ui.c: Fixed a typo.

	* arch/os2/vac++/incl/mainsrc.icc, arch/os2/watcom/mainsrc.tgt,
	arch/os2/watcom/vice.wpj, arch/win32/watcom/base.tgt,
	arch/win32/watcom/vice.wpj: Added clipboard.c to the project
	files.

	* clipboard.h: Changed the _CLIPBOARD_H define to
	_VICE_CLIPBOARD_H so that it won't interfere with the beos
	clipboard define.

	* sound.h: Fixed up to return SWORD and use int calculations
	without casts.

2008-07-04  Spiro Trikaliotis  <spiro.trikaliotis@gmx.de>

	* Version 1.22.23
